Fixed alignment issue in mobile browser0

--- a/style/custom.css
+++ b/style/custom.css
@@ -23,9 +23,9 @@ button {
     padding-right: 2%;
 }
 
-.w3-twothird-center{
+/* .w3-twothird-center{
     width: 55%;
     display: block;
     margin-left: 5%;
     margin-right: 5%;
-}
+} */
